solving lab11 done

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <header></header>
     <main>
         <section  id="mainContent">
-            <img id="leftImage" src="" alt="">
-            <img id="middleImage" src="" alt="">
-            <img id="rightImage" src="" alt="">
+            <img style="width: 400px; height: 400px;" id="leftImage" src="" alt="">
+            <img style="width: 400px; height: 400px;" id="middleImage" src="" alt="">
+            <img style="width: 400px; height: 400px;" id="rightImage" src="" alt="">
 
         </section>
+        <button id="viewResult">view result</button>
+        <ul id="finalResults"></ul>
 
     </main>
     <footer></footer>
+    <script src="./app.js"></script>
 </body>
 
 </html>
