--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     </main>
     <footer></footer>
+    <canvas id='barChart'></canvas>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <script src="./app.js"></script>
 </body>
 
